# crat

./: .gitignore  Cargo.toml  README.md  tool.py
.github/workflows/: ci.yml
benchmarks/rs/minilisp/: minilisp.rs
crates/io_replacer/src/: file_analysis.rs  tests.rs
crates/merger/: Cargo.toml
crates/merger/src/: cofactor.rs  lib.rs
crates/outparam_replacer/: Cargo.toml
crates/outparam_replacer/src/: lib.rs  transform.rs
crates/outparam_replacer/src/ai/: analysis.rs  domains.rs  mod.rs  pre_analysis.rs  semantics.rs
crates/pointer_replacer/: Cargo.toml
crates/pointer_replacer/src/: lib.rs  tests.rs
crates/pointer_replacer/src/analyses/: lattice.rs  mir_variable_grouping.rs  mod.rs  struct_array_field.rs
crates/pointer_replacer/src/analyses/borrow/: mod.rs  tests.rs
crates/pointer_replacer/src/analyses/mir/: mod.rs
crates/pointer_replacer/src/analyses/offset_sign/: mod.rs  sign.rs  tests.rs
crates/pointer_replacer/src/analyses/output_params/: eliminable_temporaries.rs  mod.rs
crates/pointer_replacer/src/analyses/ownership/: assoc.rs  call_graph.rs  discretization.rs  infer.rs  mod.rs  ptr.rs  solidify.rs  struct_ctxt.rs  vec_vec.rs  whole_program.rs
crates/pointer_replacer/src/analyses/ownership/infer/: boundary.rs
crates/pointer_replacer/src/analyses/ownership/infer/boundary/: libc.rs  library.rs
crates/pointer_replacer/src/analyses/ownership/ssa/: constraint.rs  consume.rs  dom.rs  join_points.rs  mod.rs  state.rs
crates/pointer_replacer/src/analyses/ownership/ssa/constraint/: infer.rs
crates/pointer_replacer/src/analyses/ownership/whole_program/: state.rs
crates/pointer_replacer/src/analyses/type_qualifier/foster/: mod.rs
crates/pointer_replacer/src/analyses/type_qualifier/foster/fatness/: libc.rs  mod.rs
crates/pointer_replacer/src/analyses/type_qualifier/foster/mutability/: libc.rs  mod.rs
crates/pointer_replacer/src/rewriter/: CANONICAL_REWRITER_SPEC.md  collector.rs  decision.rs  mod.rs  struct_array_field_pre.rs
crates/pointer_replacer/src/rewriter/transform/: mod.rs
crates/pointer_replacer/src/utils/dsa/: fixed_shape.rs
crates/union_replacer/: Cargo.toml
crates/union_replacer/src/: lib.rs
crates/union_replacer/src/must_analysis/: domains.rs  semantics.rs
crates/union_replacer/src/punning/: analysis.rs  bytemuck.rs  callgraph.rs  mod.rs  model.rs  raw_struct.rs  reverse_cfg.rs  test.rs  transform.rs  transformation.rs  ty_visit.rs  utils.rs
crates/union_replacer/src/union_use/: analysis.rs  bytemuck.rs  callgraph.rs  classify.rs  mod.rs  model.rs  raw_struct.rs  reverse_cfg.rs  transform.rs  ty_visit.rs  utils.rs
deps_crate/: Cargo.toml
examples/fnptr/: Cargo.toml  fnptr.c  lib.rs
src/outparam_replacer/: mod.rs  transform.rs
(+27 files in other folders)
