[package]
name = "pointer_replacer"
version = "0.1.0"
edition = "2024"

[dependencies]
utils = { path = "../utils" }
points_to = { path = "../points_to" }
itertools = "0.14.0"
petgraph = "0.8.2"
regex = "1.12.2"
anyhow = "1.0"
indexmap = "2.2.6"
cadical = "0.1"
z3 = "0.19.7"
tracing.workspace = true
etrace.workspace = true
typed-arena.workspace = true
serde.workspace = true

[dev-dependencies]
similar = "2.7.0"

[package.metadata.rust-analyzer]
rustc_private = true
